--- a/public/styles/site/_layout.scss
+++ b/public/styles/site/_layout.scss
@@ -1,16 +1,273 @@
-#header {
-	margin-top: 30px;
+@font-face {
+    font-family: 'Avenir LT Std';
+    src: url('../Avenir/AvenirLTStd-Roman.eot');
+    src: url('../Avenir/AvenirLTStd-Roman.eot?#iefix') format('embedded-opentype'),
+        url('../Avenir/AvenirLTStd-Roman.woff') format('woff'),
+        url('../Avenir/AvenirLTStd-Roman.ttf') format('truetype'),
+        url('../Avenir/AvenirLTStd-Roman.svg#AvenirLTStd-Roman') format('svg');
+    font-weight: normal;
+    font-style: normal;}
+@font-face {
+    font-family: 'Avenir LT Std';
+    src: url('../Avenir/AvenirLTStd-Medium.eot');
+    src: url('../Avenir/AvenirLTStd-Medium.eot?#iefix') format('embedded-opentype'),
+        url('../Avenir/AvenirLTStd-Medium.woff') format('woff'),
+        url('../Avenir/AvenirLTStd-Medium.ttf') format('truetype'),
+        url('../Avenir/AvenirLTStd-Medium.svg#AvenirLTStd-Medium') format('svg');
+    font-weight: 500;
+    font-style: normal;}
+body{margin:0;line-height:normal;color:#333;}
+.padLR{padding-left:0;padding-right:0;}
+.overlay{color:#fff;position:absolute;z-index:12;top:50%;left:0;width:100%;text-align:center;}
+.navbar-wrapper{position:absolute;top:0;left:0;right:0;z-index:10;}
+.header_section{padding-top:24px;}
+.header_section .navbar{margin:0;border:none;}
+.header_section ul.navbar-nav li a{font-size:16px;color:#fff;}
+.header_section ul.navbar-nav li a:hover{background:transparent;}
+.header_section ul.navbar-nav li a span{background:#29365C;box-shadow:0px 4px 25px rgba(0, 0, 0, 0.25);border-radius:3px;display:inline-block;text-align:center;color:#fff;padding:10px 20px;margin-top:-10px;}
+.bg_slider{background:linear-gradient(90deg, #0D142B 0%, rgba(12, 25, 47, 0.98) 17.68%, rgba(14, 24, 47, 0.92) 35.36%, rgba(12, 65, 73, 0.85) 52.49%, rgba(5, 179, 146, 0.72) 100%);
+position:absolute;width:100%;height:100%;left:0px;top:0;}
+.mid_content{position:relative;}
+.innerIMG img{width:100%;}
+.in_tech{position:absolute;width:498px;height:148px;left:110px;top:283px;line-height:72px;font-size:56px;color:#fff;z-index:9;letter-spacing:-.2px;}
+.right_corse{position:absolute;width:297px;height:222px;right:60px;top:242px;z-index:9;color:#fff;}
+.date{line-height:normal;font-size:18px;margin-bottom:10px;}
+.date .fa-map-marker{font-size:36px;float:left;margin-right:15px;}
+.time{line-height:normal;font-size:18px;margin-bottom:10px;}
+.up_tx{line-height:normal;font-size:20px;margin-bottom:15px;}
+.fd_tx{line-height:normal;font-size:28px;}
+.down_arrow{width:56px;height:56px;background:rgba(16, 225, 186, 0.2);position:absolute;left:0;right:0;bottom:115px;margin:0 auto;border-radius:50px;z-index:9;
+text-align:center;line-height:55px;font-size:16px;color:#BDBDBD;cursor:pointer;}
+.apply_now{display:inline-block;background:#fff;box-shadow:0px 4px 25px rgba(0, 0, 0, 0.25);border-radius:3px;padding:11px 36px 11px 36px;text-decoration:none!important;
+line-height:normal;font-size:18px;text-align:center;color:#29365C;margin-top:30px;}
+.down_arrow:hover{background:rgba(16, 225, 186, 0.5);}
+.section_accelerate{background:#F2F2F2;padding-top:100px;padding-bottom:100px;}
+.h2_head{line-height:normal;font-size:28px;text-align:center;color:#29365C;margin:0px 0px 24px 0px;}
+.section_accelerate p{text-align:center;line-height:23px;font-size:16px;text-align:center;color:#333;margin:0px 0px 47px 0px;}
+.row_sec{text-align:center;}
+.row_sec .panel-heading{padding:0;border:none;line-height:144px; background:url(../images/img01.png) no-repeat;position:relative;}
+.row_sec .pnlBG{background:rgba(41, 54, 92, 0.9);position:absolute;width:100%;height:100%;top:0;left:0;}
+.row_sec .pnlBG.green{background:rgba(16, 225, 186, 0.9);}
+.row_sec .pnlBG.blue{background:rgba(76, 98, 168, 0.9);}
+.row_sec .panel-default{border:none;box-shadow:0px 4px 10px rgba(196, 196, 196, 0.3);border-radius:4px;}
+.row_sec .panel-body{box-sizing:border-box;padding:24px 44px 65px 44px;min-height:230px;}
+.row_sec span{color:#fff;position:relative;z-index:0;line-height:normal;font-size:18px;}
+.row_sec .col-md-3{width:25.666%;display:inline-block;float:none;vertical-align:top;}
+.col_up{position:relative; z-index:9;}
+.col_up .h2_head{color:#fff; margin:60px 0px 50px 0px;}
+.upcoming_crs{position:relative;padding-bottom:90px;}
+.upcoming_crs .bg_color{background:linear-gradient(180deg, rgba(41, 54, 92, 0.95) 0%, rgba(41, 54, 92, 0.95) 0.01%, rgba(16, 225, 186, 0.95) 100%);
+position:absolute;width:100%;height:100%;left:0px;top:0; z-index:1;}
+.upcoming_crs .img img{position:absolute;width:100%;height:100%;left:0px;top:0; z-index:0;}
+.upcoming_crs .carousel-control{background:transparent;width:50px;top:54%;}
+.upcoming_crs .left.carousel-control{left:-95px;}
+.upcoming_crs .right.carousel-control{right:-95px;}
+.upcoming_crs .carousel-control i{width:48px;height:48px;background:#F2F2F2;box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.25);color:#4C62A8;border-radius:50px;line-height:48px;}
+.recta_box{background:#fff;box-shadow:0px 4px 30px rgba(0, 0, 0, 0.25);border-radius:3px; margin:15px 0px;padding:16px;position:relative;}
+.recta_box .arrow-right{color:#4C62A8;font-size:26px;position:absolute;right:20px;top:42%;}
+.recta_box .imgpart{width:128px;height:132px;border-radius:3px;float:left;margin-right:24px;}
+.recta_box .contpart h4{line-height:normal;font-size:20px;}
+.recta_box .contpart .date,.recta_box .contpart .time{font-size:14px;color:#4F4F4F;}
+.recta_box .contpart a{line-height:normal;font-size:16px;color:#4C62A8;display:block;padding-top:25px;}
+/*testimonial*/
+.section_testi{background:#F2F2F2;padding-top:100px;padding-bottom:100px;}
+.section_testi h4{font-size:20px;text-align:center;color:#4C62A8;margin:0px 0px 24px 0px;text-align:left;}
+.section_testi p{line-height:23px;font-size:16px;text-align:left;}
+.section_testi .testi_sec{text-align:center;}
+.section_testi .contentsec{display:inline-block;background:#fff;box-shadow:0px 4px 2px rgba(196, 196, 196, 0.25);border-radius:4px; width:100%;max-width:754px;float:none;padding:0;}
+.section_testi .left_img,.section_testi .right_body{float:left;}
+.section_testi .right_body{padding:40px 40px 20px 40px;box-sizing:border-box;width:63%;}
+.section_testi .carousel,
+.section_testi .carousel-inner{width:auto;display:inline-block;}
+.section_testi .leftar,
+.section_testi .rightar{background:#4C62A8;box-shadow:0px 4px 16px rgba(0, 0, 0, 0.15);position:absolute;width:48px;height:48px;left:auto;right:-26px;top:44%;border-radius:50px;line-height:48px;opacity:1;}
+.section_testi .leftar{left:-26px;right:auto;}
+/*subscribe*/
+.subs_form{width:100%;max-width:950px;margin:0 auto;}
+.subs_form h2{margin-top:100px;margin-bottom:32px;line-height:normal;font-size:32px;text-align:center;color:#29365C;}
+.subs_form input[type="email"]{border:1px solid #bdbdbd;box-sizing:border-box;border-radius:3px;height:44px;font-size:18px;color:#828282;width:67.555%;text-align:left;}
+.subs_form button.btn{background:#4C62A8;border: 1px solid #bdbdbd;box-sizing:border-box;border-radius:0px 3px 3px 0px;font-size:18px;color:#fff;width:32%;margin-left:-5px;height:44px;}
+/*--about--*/
+.page_heading{position:relative;text-align:center;}
+.page_heading img{width:100%;}
+.page_heading h1{font-size:48px;color:#fff;margin:0;}
+.page_heading p{font-size:20px;color:#E0E0E0;}
+.page_heading .page_name{position:absolute;left:0;bottom:35px;width:100%;z-index:9;}
+.bg_inner_pages{background:linear-gradient(90deg, #0D142B 0%, rgba(14, 24, 47, 0.92) 0.01%, rgba(12, 65, 73, 0.85) 0.02%, #0C192F 0.03%, rgba(5, 179, 146, 0.8) 100%);
+box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);position:absolute;left:0;top:0;width:100%;height:100%;}
+.aboutus p{text-align:left;}
+.button{text-align:center;}
+.button a{background:#4C62A8;box-shadow:0px 4px 25px rgba(0, 0, 0, 0.25);border-radius:3px;display:inline-block;line-height:normal;font-size:16px;text-align:center;color:#fff;
+padding:12px 59px 12px 57px;text-decoration:none;}
+/*--Courses--*/
+.cors_ttl{line-height:25px;font-size:18px;text-align:center;color:#333;margin-bottom:35px;}
+.col_immer{background:#fff;box-shadow:0px 4px 10px rgba(196, 196, 196, 0.7);border-radius:4px;padding:23px 24px 25px 24px;overflow:hidden;width:100%;max-width:950px;margin:0 auto 60px auto;}
+.col_immer:last-child{margin-bottom:0;}
+.col_immer .img_sec{width:240px;height:252px;float:left;margin-right:24px;position:relative;}
+.col_immer .detail_sec{float:right; width:70%;}
+.col_immer .detail_sec h2{line-height:normal;font-size:32px; color:#29365C;margin-top:65px;}
+.col_immer .detail_sec p{line-height:28px;	 font-size:20px; color:#333333;margin-bottom:60px;}
+.col_immer .detail_sec a{line-height:normal; font-size:18px; color:#4C62A8;float:right;}
+/*--Immersive Courses--*/
+.col_sive{background:#fff;box-shadow:0px 4px 10px rgba(196, 196, 196, 0.7);border-radius:4px;padding:23px 24px 25px 24px;overflow:hidden;width:100%;max-width:950px;margin:0 auto 70px auto;}
+.col_sive:last-child{margin-bottom:0;}
+.col_sive .img_sec{width:92px;height:92px;float:left;margin-right:16px;position:relative;}
+.col_sive .dateandtime{float:left; width:87%;}
+.col_sive .dateandtime .date,.col_sive .dateandtime .time{font-size:14px;color:#4F4F4F;margin:0px 0px 7px 0px;}
+.col_sive .detail_sec h2{line-height:normal;font-size:20px; color:#29365C;margin-top:5px;}
+.col_sive .parra{clear:both;padding-top:35px;}
+.col_sive .parra p{line-height:23px;font-size:16px; color:#333;margin-bottom:35px;}
+.col_sive .parra a{line-height:normal;font-size:16px;color:#4C62A8;float:right;}
+/*--frontend developer--*/
+.dev_sec .h2_head{font-size:24px;}
+.dev_sec .h2_head,.dev_sec p{text-align:left;}
+.dev_sec .tk_awy{padding-top:20px;}
+.dev_sec .tk_awy .h2_head{margin-bottom:18px;}
+.dev_sec .tk_awy.du_sec,.dev_sec .tk_awy.pre_sec{padding-top:40px;}
+.dev_sec ul li{text-align:left;}
+.dev_sec .tk_awy ul{padding-left:18px;}
+.dev_sec .tk_awy ul li{line-height:normal;font-size:20px;color:#333;}
+.dev_sec .tk_awy ul li span{font-size:16px;}
+.right_section{background:#29365C;box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);border-radius:4px;padding:35px 36px;}
+.right_section ul{padding:0;margin:0;}
+.right_section ul li{border-bottom:1px solid #757575;padding-bottom:34px;margin-bottom:34px;}
+.right_section ul li:last-child{border-bottom:none;margin-bottom:15px;}
+.right_section ul li img{margin-right:24px;float: left;}
+.right_section ul li span{line-height:normal;font-size:18px;color:#fff;line-height:30px;}
+.right_section .button a{display:block;}
+.rightSEC .get_crs{padding-top:40px;}
+.rightSEC .get_crs span{line-height:normal;font-size:16px;color:#333;display:block;padding-bottom:5px;text-align:left;}
+.rightSEC .get_crs input[type="email"]{border:1px solid #bdbdbd;box-sizing:border-box;border-radius:3px;height:40px;font-size:14px;color:#828282;width:68%;text-align:left;float:left;}
+.rightSEC .get_crs button.btn{background:#4C62A8;border:1px solid #bdbdbd;box-sizing:border-box;border-radius:0px 3px 3px 0px;font-size:14px;color:#fff;width:32%;margin-left:-5px;height:40px;}
+/*-- form --*/
+.dev_sec .row{text-align:center;}
+.dev_sec .col-md-10{float:none;display:inline-block;}
+.dev_sec .leftpage{position:relative;margin:0 15px;}
+.dev_sec .bgble{background:rgba(41, 54, 92, 0.9);border-radius:2px 0px 0px 2px;position:absolute;left:0;top:0;width:100%;height:100%;}
+.dev_sec .content{padding:0 42px;text-align:center;transform:translateY(65%); -webkit-transform:translateY(55%);}
+.dev_sec .content img{margin-bottom:24px;}
+.dev_sec .content span{display:block;line-height:normal;font-size:24px;text-align:center;color:#fff;margin-bottom:10px;}
+.dev_sec .content p{line-height:23px;font-size:16px;text-align:center;color:#fff;}
+.dev_sec .rightpage{background:#fff;border-radius:2px;padding:24px 32px;margin-left:-15px;text-align:left;}
+.dev_sec .rightpage h2{text-align:left;line-height:normal;font-size:20px;color:#29365C;margin-top:0;margin-bottom:32px;}
+.dev_sec .rightpage label{line-height:normal;font-size:14px;color:#29395e;margin-bottom:4px;}
+.rightpage .form-group input[type="text"],.rightpage .form-group input[type="number"],.rightpage .form-group textarea{background:#fff;border:1px solid #BDBDBD;box-sizing:border-box;border-radius:3px;height:38px;}
+.rightpage .form-group textarea{height:60px;}
+.rightpage .form-group{margin-bottom:22px;}
+.rightpage .field_grp.form-group label{position:relative;margin-right:32px;margin-bottom:0px;}
+.rightpage .field_grp.form-group label span{line-height:20px;}
+.rightpage .field_grp.form-group label input[type="radio"]{width:20px;height:20px;position:absolute;left:0;top:0;opacity:0;z-index:9;margin-top:0;}
+.rightpage .field_grp.form-group label input[type="radio"]:checked + span:before{background:url(../images/check.svg) no-repeat;}
+.rightpage .field_grp.form-group label span:before{content:'';width:20px;height:20px;display:inline-block;background:url(../images/uncheck.svg) no-repeat;float:left;margin-right:10px;}
+.rightpage .button a{display:block;}
+.footer-bs{background:#29365C;padding-top:80px;padding-bottom:54px;}
+.footer-bs h4{font-size:16px;color:#fff;}
+.footer-bs ul{padding:0;}
+.footer-bs a,.footer-bs .input-group,.ftr_logo p{font-size:14px;color:#bdbdbd;padding-bottom:8px;display:block;text-decoration:none;}
+.ftr_logo img{margin-bottom:14px;}
+.footer-bs .col-md-3{width:auto;float:none;display:inline-block;text-align:left;}
+.footer-bs .ftrone,.footer-bs .ftrtwo{margin-right:13%;}
+.footer-bs .ftrfour{float:right;}
+.footer-bs .social i{color:#bdbdbd;font-size:20px;padding-right:17px;}
+.footer-bs .social a{display:inline-block;}
+.footer-bs p.input-group{margin-bottom:5px;}
+
+
+
+
+
+
+img{max-width:100%;}
+
+
+
+@media (max-width:767px){
+.row{margin-right:0px;margin-left:0px;}
+.container{width:100%;}
+.navbar .navbar-toggle{border:1px solid #fff;position:absolute;right:5px;top:-70px;}
+.navbar .navbar-toggle span{background:#fff;}
+.navbar-collapse.in{background:#0b6057;}
+.container.mid_content,.down_arrow{display:none;}
+.header_section .navbar{width:100%;position:absolute;left:0;top:100px;z-index:9;min-height:auto;}
+.upcoming_crs .left.carousel-control,.section_testi .leftar{left:0px;}
+.upcoming_crs .right.carousel-control,.section_testi .rightar{right:0px;}
+.section_accelerate{padding-top:50px;padding-bottom:50px;}
+.row_sec .col-md-3{width:100%;padding:0;}
+.upcoming_crs{padding-bottom:40px;}
+.col_up .h2_head{margin:40px 0px 20px 0px;}
+.recta_box + .recta_box{display:none;}
+.recta_box .imgpart{margin:0 auto 30px auto;float:none;}
+.recta_box .arrow-right{display:none;}
+.section_testi{padding-top:50px;padding-bottom:50px;}
+.section_testi .left_img{float:none;margin-top:30px;}
+.section_testi .right_body{width:100%;padding-top:60px;}
+.subs_form h2{font-size:22px;margin-top:30px;}
+.subs_form button.btn{font-size:14px;}
+/*inner*/
+.page_heading{height:180px;}
+.page_heading .page_name{bottom:10px;}
+.page_heading h1{font-size:24px;}
+.page_heading p{font-size:14px;}
+.col_immer .detail_sec{width:100%;}
+.col_immer .detail_sec h2{font-size:24px;}
+.right_section{padding:25px 15px;}
+.col_immer .img_sec{width:170px;height:180px;margin:0 auto;float:none;}
+.col_sive .img_sec{width:100%;text-align:center;margin-bottom:25px;}
+.col_sive{margin-bottom:25px;}
+.dev_sec.frm_sec .col-md-10{padding:0;}
+.dev_sec.frm_sec .leftpage{margin:0;}
+.rightpage .field_grp.form-group label{margin-bottom:15px;}
+
+.footer-bs{padding-top:50px;}
+.footer-bs .col-md-3{width:100%;margin:0;text-align:center;}
 }
 
-#footer {
-	margin-top: 30px;
-	border-top: 1px solid #eeeeee;
-	padding-top: 30px;
-	color: #777777;
+@media screen and (min-width:768px) and (max-width:1023px) {
+.upcoming_crs .left.carousel-control,.section_testi .leftar{left:0px;}
+.upcoming_crs .right.carousel-control,.section_testi .rightar{right:0px;}
+.in_tech{width:340px;left:10px;top:163px;line-height:52px;font-size:36px;}
+.right_corse{top:133px;right:10px;}
+.section_accelerate,.section_testi{padding-top:50px;padding-bottom:50px;}
+.row_sec .col-md-3{width:32.666%;}
+.row_sec span{width:80%;display:inline-block;}
+.row_sec .panel-body{padding: 23px 15px 65px 15px;min-height:210px;}
+.recta_box + .recta_box{display:none;}
+.down_arrow{display:none;}
+.subs_form h2{margin-top:50px;font-size:28px;}
+.footer-bs .ftrone, .footer-bs .ftrtwo{margin-right:3%;}
+
+.pull-right.rightSEC{width:100%;}
+.col_sive .dateandtime{width:80%;}
+.col_sive{margin-bottom:30px;}
+.col_immer .img_sec{width:170px;height:180px;}
+.col_immer .detail_sec h2{margin-top:15px;}
+.col_immer .detail_sec p{margin-bottom:40px;}
+.dev_sec .col-md-10{width:100%;}
+.dev_sec .leftpage{margin:0;}
+.dev_sec .rightpage{margin-left:0;}
+
+.page_heading .page_name{bottom:10px;}
+.page_heading h1{font-size:30px;}
+.page_heading p{font-size:14px;}
+
 }
 
-.gallery-image img{
-    display: block;
-    max-width: 100%;
-    height: auto;
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
