added Testimonial models

--- a/public/styles/site/_layout.scss
+++ b/public/styles/site/_layout.scss
@@ -29,7 +29,7 @@ body{margin:0;line-height:normal;color:#333;}
 position:absolute;width:100%;height:100%;left:0px;top:0;}
 .mid_content{position:relative;}
 .innerIMG img{width:100%;}
-.in_tech{position:absolute;width:498px;height:148px;left:110px;top:283px;line-height:72px;font-size:56px;color:#fff;z-index:9;letter-spacing:-.2px;}
+.in_tech{position:absolute;width: 520px;height:auto;left:110px;top:283px;line-height:72px;font-size:56px;font-weight: 900; color:#fff;z-index:9;letter-spacing:-.2px;}
 .right_corse{position:absolute;width:297px;height:222px;right:60px;top:242px;z-index:9;color:#fff;}
 .date{line-height:normal;font-size:18px;margin-bottom:10px;}
 .date .fa-map-marker{font-size:36px;float:left;margin-right:15px;}
